# my

./: 2.pl
algo/: .gitignore  CMakeLists.txt  algo_test  kth_ordered_statistic  main.cpp
algo/include/: kth_order_statistic.hpp
algo/tests/: algo.hpp  gtest_main.cpp
chess/: .chess.cpp.swp  chess.cpp
codeeval/103/: main.cpp
codeeval/110/: .main.cpp.swp  main  main.cpp  test  test.py
codeeval/144/: .main.cpp.swp  .test.swp  main.cpp
codeeval/145/: main.py  test
codeeval/18/: main.py  test
codeeval/19/: main.cpp
codeeval/20/: main.pl  test.txt
codeeval/21/: main.cpp  test.txt
codeeval/22/: main.cpp
codeeval/24/: main.py
codeeval/25/: main.cpp
codeeval/29/: main.py  test
codeeval/3/: main.cpp
codeeval/30/: main.py  test
codeeval/4/: main.cpp
codeeval/6/: main.py
codeeval/91/: main.cpp
codeeval/93/: main.pl  main.py  main.py2  test.txt
explicit_test/: 1  1.cpp
kth_ordered_statistic/: .gitignore  CMakeLists.txt  README.md  debug.hpp  kth_ordered_statistic.hpp  main.cpp
kth_ordered_statistic/include/: kth_order_statistic.hpp
kth_ordered_statistic/tests/: .algo.cpp.swo  gtest_main.cpp
other/: bits_in_byte.cpp  inh3.cpp  inheritance.cpp  inheritance2.cpp  is_anagram.cpp  malloc.cpp  polimorph.cpp  read_cin.cpp  read_cin2.cpp  rect_intersect.cpp  stack_test.cpp  string_to_number.cpp  strstr.cpp  tree.cpp  tuple.cpp  variable_number_of_arguments.cpp
